test/semantic_errors/invalid_binaryop1.mc
void main() {
    bool res;
    int a;
    bool b;
    res = a < b;
}